# shredderpy

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
shredderpy/: main.py  shredder.py
